package com.logger;

public interface ILogger {
    void info(String message);

    void error(String message);

    void warn(String message);
}
